--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-contentful": "^2.0.26",
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
+    "js-video-url-parser": "^0.2.8",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
